<resources>
    <string name="app_name">MDP</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="start">시작하기</string>
    <string name="execute">실행</string>
    <string name="stop">중지</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="good">양품 개수 : 0</string>
    <string name="defect">불량품 개수 : 0</string>
    <string name="logout">로그아웃</string>
    <string name="next">다음</string>
    <string name="wifi">와이파이</string>
</resources>