<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:layout_width="330dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ai_factory_logo"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_id"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/edittext_border"
        android:textColor="#000000"
        android:textSize="20sp"
        android:hint="@string/id"
        android:inputType="text"
        android:digits="0123456789_-abcdefghijklmnopqrstuvwxyz"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/edittext_border"
        android:textColor="#000000"
        android:textSize="20sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789~!@#$%^&amp;*_-+=`|\(){}[]:;&quot;&apos;&lt;&gt;,.?/"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_id" />

    <EditText
        android:id="@+id/register_check_password"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/edittext_border"
        android:textColor="#000000"
        android:textSize="20sp"
        android:hint="비밀번호 확인"
        android:inputType="textPassword"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789~!@#$%^&amp;*_-+=`|\(){}[]:;&quot;&apos;&lt;&gt;,.?/"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/edittext_border"
        android:textColor="#000000"
        android:textSize="20sp"
        android:hint="이름"
        android:inputType="text"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_check_password" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/edittext_border"
        android:textColor="#000000"
        android:textSize="20sp"
        android:hint="이메일"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789.@"
        android:inputType="textEmailAddress"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_name" />

    <Button
        android:id="@+id/register_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/gradient"
        app:backgroundTint="@null"
        android:text="@string/register"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email" />

</androidx.constraintlayout.widget.ConstraintLayout>